--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^4.16.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
