--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nasa-project-api",
+  "name": "@nasa-project/server",
   "version": "1.0.0",
   "description": "NASA Mission Control API",
   "main": "index.js",
@@ -8,7 +8,7 @@
   "scripts": {
     "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/server.ts",
     "start": "tsc && node build/server.js",
-    "test": "jest --watchAll --no-cache",
+    "test:watch": "jest --watchAll --no-cache",
     "test:ci": "jest",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "lint": "eslint --ext js,jsx,ts,tsx --fix --ignore-path .gitignore .",
@@ -18,7 +18,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^4.16.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
