--- a/package.json
+++ b/package.json
@@ -1,49 +1,34 @@
 {
-  "name": "@nasa-project/server",
+  "name": "nasa-project",
   "version": "1.0.0",
-  "description": "NASA Mission Control API",
+  "private": true,
   "main": "index.js",
-  "author": "Francis Lagares",
+  "repository": "git@github.com:francislagares/NASA-project.git",
+  "author": "Francis Lagares <francis.lagares@gmail.com>",
   "license": "MIT",
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/server.ts",
-    "start": "tsc && node build/server.js",
-    "test:watch": "jest --watchAll --no-cache",
-    "test:ci": "jest",
-    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
-    "lint": "eslint --ext js,jsx,ts,tsx --fix --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx|json|md)\" --write",
-    "postinstall": "husky install"
+    "server": "yarn workspace @nasa-project/server start:dev",
+    "client": "yarn workspace @nasa-project/client start",
+    "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\"",
+    "build-server": "yarn workspace @nasa-project/server build",
+    "build-client": "yarn workspace @nasa-project/client build"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "csv-parse": "^4.16.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "concurrently": "^6.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "lint-staged": "^11.0.0",
-    "nodemon": "^2.0.9",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "config": {
