--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@nasa-project/client",
   "version": "1.0.0",
-  "private": true,
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
     "react": "^17.0.1",
@@ -11,7 +10,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH=../server/public react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
