--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "server"
   ],
   "scripts": {
+    "install-server": "yarn workspace @nasa-project/server install",
+    "install-client": "yarn workspace @nasa-project/client install",
+    "install": "concurrently --kill-others-on-fail \"yarn install-server\"  \"yarn install-client\"",
     "server": "yarn workspace @nasa-project/server start:dev",
     "client": "yarn workspace @nasa-project/client start",
     "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\"",
     "build-server": "yarn workspace @nasa-project/server build",
-    "build-client": "yarn workspace @nasa-project/client build"
+    "build-client": "yarn workspace @nasa-project/client build",
+    "deploy": "concurrently --kill-others-on-fail \"yarn build-client\"  \"yarn server\""
   },
   "dependencies": {
     "concurrently": "^6.2.0"
@@ -27,7 +31,6 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.0",
-    "jest": "^27.0.6",
     "lint-staged": "^11.0.0",
     "typescript": "^4.3.5"
   },
