--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,21 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2021,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "ignorePatterns": ["node_modules", "build", "coverage"],
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "browser": true,
+    "serviceworker": true
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "jest", "prettier"],
   "extends": [
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
     "prettier"
   ],
   "rules": {
@@ -26,7 +30,6 @@
     "prefer-const": "error",
     "max-lines-per-function": ["warn", 40],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": "error",
     "prettier/prettier": "error"
   }
 }
