--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "scripts": {
     "install-server": "yarn workspace @nasa-project/server install",
     "install-client": "yarn workspace @nasa-project/client install",
-    "install": "concurrently --kill-others-on-fail \"yarn install-server\"  \"yarn install-client\"",
+    "install:deps": "concurrently --kill-others-on-fail \"yarn install-server\"  \"yarn install-client\"",
     "server": "yarn workspace @nasa-project/server start:dev",
     "client": "yarn workspace @nasa-project/client start",
     "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\"",
+    "test:watch": "jest --watchAll --no-cache",
+    "test:ci": "jest",
     "build-server": "yarn workspace @nasa-project/server build",
     "build-client": "yarn workspace @nasa-project/client build",
     "deploy": "concurrently --kill-others-on-fail \"yarn build-client\"  \"yarn server\"",
@@ -31,10 +33,20 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.0",
+    "jest": "^27.0.6",
     "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "config": {
