feat(client): connect post launches with front-end

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@nasa-project/client",
   "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
     "react": "^17.0.1",
@@ -20,6 +21,9 @@
       "react-app/jest"
     ]
   },
+  "devDependencies": { 
+    "jest": "^27.0.6"
+  },  
   "browserslist": {
     "production": [
       ">0.2%",
