--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "prefer-const": "error",
     "max-lines-per-function": ["warn", 40],
     "no-shadow": "off",
+    "jest/expect-expect": ["error", { "assertFunctionNames": ["expect", "request.**.expect"] }],
     "prettier/prettier": "error"
   }
 }
