--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^26.0.23",
     "@types/morgan": "^1.9.2",
     "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
     "nodemon": "^2.0.9",
     "supertest": "^6.1.3"
   }
