feat(api): add pm2 process manager

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "install:deps": "concurrently --kill-others-on-fail \"yarn install-server\"  \"yarn install-client\"",
     "server": "yarn workspace @nasa-project/server start:dev",
     "client": "yarn workspace @nasa-project/client start",
+    "cluster": "yarn workspace @nasa-project/server cluster",
     "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\"",
     "test:watch": "jest --watchAll --no-cache",
     "test:ci": "jest",
     "build-server": "yarn workspace @nasa-project/server build",
     "build-client": "yarn workspace @nasa-project/client build",
     "deploy": "concurrently --kill-others-on-fail \"yarn build-client\"  \"yarn server\"",
+    "deploy:cluster": "concurrently --kill-others-on-fail \"yarn build-client\"  \"yarn cluster\"",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "lint": "eslint --ext js,jsx,ts,tsx --fix --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx|json|md)\" --write"
