--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,15 @@
     "start": "tsc && node build/server.js",
     "build": "tsc",
     "test:watch": "jest --watchAll --no-cache",
-    "test:ci": "jest"
+    "test:ci": "jest",
+    "cluster": "pm2 start -i max --interpreter none 'ts-node src/server.ts'"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^4.16.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
