--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^4.16.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "pm2": "^5.1.0"
   },
@@ -25,7 +27,6 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "nodemon": "^2.0.9",
     "supertest": "^6.1.3"
