--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^26.0.23",
     "@types/morgan": "^1.9.2",
     "@types/supertest": "^2.0.11",
+    "mongodb-memory-server": "^7.2.0",
     "nodemon": "^2.0.9",
     "supertest": "^6.1.3"
   }
